--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "aos": "^3.0.0-beta.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "rsuite": "^5.45.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
