--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-tabs": "^6.0.2",
     "rsuite": "^5.45.0",
     "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
